--- a/SmartSurfSpots.Data/SmartSurfSpots.Data.csproj
+++ b/SmartSurfSpots.Data/SmartSurfSpots.Data.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\SmartSurfSpots.Domain\SmartSurfSpots.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
